--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3798475662"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=11589156" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4120719859"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=380184019" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4216292901" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=3941844217" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -44,6 +44,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width shared_content" id="u118-bw" data-content-guid="u118-bw_content">
      <div id="u118"><!-- simple frame --></div>
     </div>
+    <div class="grpelem shared_content" id="u2370" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2370_content"><!-- simple frame --></div>
     <div class="clearfix grpelem" id="pu170-7"><!-- column -->
      <div class="clearfix colelem" id="u170-7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
       <p class="shared_content" data-content-guid="u170-7_0_content">The Corner was created in 2019 by Ethan Wilk, a teenager from Arizona (<a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u170-2">@BitcoinRooster on Twitter</span></a>). A young developer with backgrounds in video game and iOS development, Ethan fell in love with the technology that powered cryptocurrency and the blockchain. Fueled by curiosity, Ethan began to investigate the white paper behind every altcoin he came across, and eventually took an interest in trading the internet coins in 2017. With a newly found passion for cryptocurrency and for programming, Ethan took it upon himself to create algorithms to trade these mysterious cryptocurrencies. As the operations soon became too messy, he decided to create this very blog you're reading in order to track his progress as a cryptocurrency developer.</p>
@@ -65,6 +66,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p class="shared_content" data-content-guid="u337-4_0_content">The Blog</p>
      </div>
     </div>
+    <div class="grpelem shared_content" id="u2376" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-content-guid="u2376_content"><!-- simple frame --></div>
     <div class="verticalspacer" data-offset-top="609" data-content-above-spacer="608" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
@@ -82,6 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+    <span class="grpelem placeholder" data-placeholder-for="u2370_content"><!-- placeholder node --></span>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu170-7"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u170-7"><!-- content -->
       <span class="placeholder" data-placeholder-for="u170-7_0_content"><!-- placeholder node --></span>
@@ -92,8 +95,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
-     <span class="nonblock nontext Button ButtonSelected rounded-corners clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
-     <span class="nonblock nontext Button rounded-corners clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext Button ButtonSelected clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     </div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u166-4"><!-- content -->
@@ -103,6 +106,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="placeholder" data-placeholder-for="u337-4_0_content"><!-- placeholder node --></span>
      </div>
     </div>
+    <span class="grpelem placeholder" data-placeholder-for="u2376_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="1260" data-content-above-spacer="1259" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
@@ -120,6 +124,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+    <span class="grpelem placeholder" data-placeholder-for="u2370_content"><!-- placeholder node --></span>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu170-7"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u170-7"><!-- content -->
       <span class="placeholder" data-placeholder-for="u170-7_0_content"><!-- placeholder node --></span>
@@ -149,6 +154,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="placeholder" data-placeholder-for="u337-4_0_content"><!-- placeholder node --></span>
      </div>
     </div>
+    <span class="grpelem placeholder" data-placeholder-for="u2376_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="1253" data-content-above-spacer="1253" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
